# DataAcquisition2.0

./: .gitattributes  .gitignore  .gitmodules  .project  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  refactor-request.md
.github/workflows/: action.yaml  action.yml  ci_build.yaml
Aero_Sub_DAQ/Air_pressure_sensor_code/: Air_pressure_sensor_code.ino  air_pressure_code_v2.ino  good_data.ino
Aero_Sub_DAQ/air_pressure/: air_pressure.ino
Archive/ArduinoPrograms/LinPot_SD/: LinPot_SD.ino
Archive/ArduinoPrograms/SiMlx/: Adafruit_MLX90614.cpp  SiMlx.ino
Archive/Mbed_DAQ/: .mbedignore
Archive/Mbed_DAQ/Source/: main.cpp
Arduino_Sub_DAQ/: Arduino_Sub_DAQ.ino  Linear_Potentiometer_Microcontroller_Code (2).ino  SiMlx.ino
Arduino_Sub_DAQ/SiMlx/: Adafruit_MLX90614.h  SiMlx.ino
DAQ_Dash/: base  base.cpp
DAQ_Dash/QT_Dash/: QT_Dash.pro  main.cpp  mainwindow.cpp  mainwindow.ui  worker.h
DAQ_Dash/build-untitled-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
DAQ_Dash/build-untitled-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
DAQ_Dash/build-untitled-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
DAQ_Dash/build-untitled-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/untitled_autogen/: deps  mocs_compilation.cpp
DAQ_Dash/untitled/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp
DAQ_System/: .cproject  .mxproject  CMakeLists.txt  DAQ_System.ioc  DAQ_System.launch  STM32F429ZITX_FLASH.ld  custom_targets.json  mbed_app.json
DAQ_System/Core/Inc/: iwdg.h  retarget.h  stm32f4xx_hal_conf.h  usart.h  usb_otg.h
DAQ_System/Core/Src/: freertos.c  gpio.c  main.c
DAQ_System/Program/: app.cpp  app.hpp
DAQ_System/Program/Src/: app.cpp
DAQ_System/Source/: Gyroscope.cpp  Hx711.cpp  Hx711.h  L3GD20H.cpp  L3GD20H.h  LSM303DLHC.cpp  LSM303DLHC.h  gyroscope_l3gd20h.cpp  gyroscope_l3gd20h.hpp  igyroscope.hpp  main(updated).cpp  main.cpp  strainGauges.cpp
DAQ_System/Source/Adapters/: LSM303DLHC.cpp  LSM303DLHC.h
DAQ_System/Source/Application/: I_Data_Logger.hpp  analogSensor.tpp  (+3 more)
DAQ_System/Tests/: CMakeLists.txt  Dockerfile  run_tests.py
DAQ_System/hx711Lib/: Hx711.h
DAQ_System/mcp2515Lib/: .hg_archival.txt  CAN3.cpp  CAN3.h  mcp2515.cpp  mcp2515.h  mcp2515_bittime.h  mcp2515_can.h
GPSlocation/: GPSlocation.ino
Project/: .project
Project/DAQ_H7/: .mxproject  .project  DAQ_H7.ioc
Project/DAQ_System/: .cproject  .mxproject  .project  DAQ_System.ioc  DAQ_System.launch  STM32F429ZITX_RAM.ld
Project/Docs/: Dockerfile  Doxyfile.in  conf.py  index.rst
Project/Tests/: CMakeLists.txt  Dockerfile
Project/Tests/Src/Application/: circular_queue_tests.cpp
Project/Tests/Src/Sensor/ECU/PE3/: frame_formats_tests.cpp  frame_parsing_tests.cpp  pe_frames_tests.cpp
Schematics/tireTemps/: fp-info-cache  fp-lib-table  sym-lib-table  tireTempLbr.kicad_sym  tireTemps.kicad_pcb  tireTemps.kicad_prl  tireTemps.kicad_pro  tireTemps.kicad_sch
(+844 files in other folders)
